# scexao-dataanalysis

vampirespdi/: CMakeLists.txt  polcycleproc.c  polcycleproc.h  read_asciiconf.c  read_asciiconf.h  scanFITSfiles.c  scanFITSfiles.h  vampirespdi.c  vampirespdi.h
